--- a/angular.json
+++ b/angular.json
@@ -56,6 +56,7 @@
               "src/styles.css"
             ],
             "scripts": [],
+            "baseHref": "/Shoponline-/",
             "server": "src/main.server.ts",
             "prerender": true,
             "ssr": {
@@ -68,7 +69,7 @@
                 {
                   "type": "initial",
                   "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumError": "2mb"
                 },
                 {
                   "type": "anyComponentStyle",
